objects/pse__Assignment__c.object
<CustomObject>
    <customHelpPage>pse__AssignmentAndScheduleHelp</customHelpPage>
    <description>Stores information about the allocation of a resource to a project and specifies the bill rate and cost rate for time entered. It references the schedule for a resource and, optionally, a project milestone.</description>
    <fields>
        <fullName>Product_Scope__c</fullName>
        <formula>pse__Project__r.Product_Scope__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Account_ID__c</fullName>
        <formula>pse__Project__r.TR_PS_Enterprise_Project_Account_Id__c</formula>
        <label>Project Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Account_Name__c</fullName>
        <formula>pse__Project__r.TR_PS_Enterprise_Project_Account_Name__c</formula>
        <label>Project Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_PS_Enterprise_Travel_Required__c</fullName>
        <inlineHelpText>Travel to Client site needed</inlineHelpText>
        <label>Travel Required ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                    <default>true</default>
                    <label>TBD</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__API_Assignment_Correlation_Id__c</fullName>
        <label>API Assignment Correlation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Action_Refresh_EVA_Hours_From_Timecards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, refreshes Actual Time information on Est Vs Actuals records from Timecards associated with Assignment.</description>
        <inlineHelpText>If checked on save, refreshes Actual Time information on Est Vs Actuals records from Timecards associated with Assignment.</inlineHelpText>
        <label>Action: Refresh EVA Hours From Timecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Refresh_Expense_Rollups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, recalculates information from expenses associated with the assignment.</description>
        <inlineHelpText>If checked on save, recalculates information from expenses associated with the assignment.</inlineHelpText>
        <label>Action: Refresh Expense Roll-Ups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Refresh_Hours_From_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, refreshes Scheduled Hours and Est Vs Actuals records related to Assignment Schedule.</description>
        <inlineHelpText>If checked on save, refreshes Scheduled Hours and Est Vs Actuals records related to Assignment Schedule.</inlineHelpText>
        <label>Action: Refresh Hours From Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Refresh_Timecard_Rollups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, recalculates information from timecards associated with the assignment.</description>
        <inlineHelpText>If checked on save, recalculates information from timecards associated with the assignment.</inlineHelpText>
        <label>Action: Refresh Timecard Roll-Ups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Daily_Notes_Last_Updated__c</fullName>
        <description>Date-time of most recent insert/update/delete/undelete on the Assignment Daily Notes child records.</description>
        <inlineHelpText>Date-time of most recent insert/update/delete/undelete on the Assignment Daily Notes child records.</inlineHelpText>
        <label>Assignment Daily Notes Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Daily_Notes__c</fullName>
        <description>Shows concatenated notes from Assignment&apos;s Daily Notes child records.</description>
        <inlineHelpText>Shows concatenated notes from Assignment&apos;s Daily Notes child records.</inlineHelpText>
        <label>Assignment Daily Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Number__c</fullName>
        <displayFormat>A-{0000000}</displayFormat>
        <inlineHelpText>System generated unique assignment number referenced on other FinancialForce PSA pages.</inlineHelpText>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate_Currency_Code__c</fullName>
        <label>Average Cost Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate_Number__c</fullName>
        <label>Average Cost Rate Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate__c</fullName>
        <formula>pse__Average_Cost_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(pse__Average_Cost_Rate_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Cost Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Sequence_Number__c</fullName>
        <description>Not intended for display. Needed to convert the autonumber to a numeric value for sorting.</description>
        <formula>Value(pse__Batch_Sequence__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Sequence__c</fullName>
        <description>An auto-number used for batch processing assignments. Not intended for display.</description>
        <displayFormat>{0}</displayFormat>
        <label>Batch Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Rate__c</fullName>
        <inlineHelpText>Enter the hourly bill rate for the resource</inlineHelpText>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Amount_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Value of billable hours the resource logged against the assignment, which you can view in the project and RPG actuals.</inlineHelpText>
        <label>Billable Amount In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Amount_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Value of billable hours the resource logged against the assignment.</inlineHelpText>
        <label>Billable Amount Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Days_In_Financials__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of billable days the resource logged against the assignment, which you can view in the project and RPG actuals.</inlineHelpText>
        <label>Billable Days In Financials</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Days_Submitted__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of billable days the resource logged against the assignment.</inlineHelpText>
        <label>Billable Days Submitted</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expenses_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Pass-through billable expenses the resource logged against the assignment, which you can view in the project and RPG actuals.</inlineHelpText>
        <label>Billable Expenses In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expenses_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Pass-through billable expenses the resource logged against the assignment.</inlineHelpText>
        <label>Billable Expenses Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Hours_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours In Financials</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Hours_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Number of billable hours the resource logged against the assignment.</inlineHelpText>
        <label>Billable Hours Submitted</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Expense_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that Expense Reports and Expenses may no longer be entered for this Assignment.  Is checked automatically when the Assignment&apos;s Project is Closed for Expense Entry.</description>
        <inlineHelpText>Indicated whether the resource can no longer log expenses for the assignment. This is normally associated with project closure.</inlineHelpText>
        <label>Closed for Expense Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Time_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that Timecards may no longer be entered for this Assignment.  Is checked automatically when the Assignment&apos;s Project is Closed for Time Entry.</description>
        <inlineHelpText>Indicates whether the resource can no longer log hours for time entry.</inlineHelpText>
        <label>Closed for Time Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Rate used to calculate the cost of the resource for the time entered on this assignment.</inlineHelpText>
        <label>Cost Rate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Currency_Code__c</fullName>
        <inlineHelpText>Currency used to calculate the resource cost for the assignment.This is used when your organization uses multiple currencies.</inlineHelpText>
        <label>Cost Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate__c</fullName>
        <formula>pse__Cost_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(ROUND(pse__Cost_Rate_Amount__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Rate used to calculate the cost of the resource for the time entered on this assignment.</inlineHelpText>
        <label>Cost Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Bill_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the bill rate is a daily rate.</inlineHelpText>
        <label>Bill Rate is Daily Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Cost_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the cost rate is a daily rate.</inlineHelpText>
        <label>Cost Rate is Daily Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Timecard_Notes_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the resource must enter daily notes before saving timecards for this assignment.</inlineHelpText>
        <label>Daily Timecard Notes Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Assignment_to_Sync_Jira_Worklog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if this assignment is used for syncing time from Jira.</description>
        <inlineHelpText>Determines if this assignment is used for syncing Jira work logs with PSA timecards for the project and resource. Only one assignment can be used for syncing time from Jira for a single project and resource.</inlineHelpText>
        <label>Use for Syncing Time from Jira</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <inlineHelpText>Text box where you can enter further information about the assignment.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__ERP_Absence_Correlation_Id__c</fullName>
        <description>This records the absence request correlation key used within the Foundations system.</description>
        <externalId>true</externalId>
        <inlineHelpText>This records the absence request correlation key used within the erp system.</inlineHelpText>
        <label>Foundations Absence Correlation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Eligible_for_Schedule_Recalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the assignment schedule is eligible for recalculation based on changes to any associated tasks.</inlineHelpText>
        <label>Eligible for Schedule Recalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <formula>pse__Schedule__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Estimated_Time_To_Completion__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>The estimated hours to complete the assignment.You can start with the original hours and change the value if the assignment continues beyond the original schedule.</inlineHelpText>
        <label>Estimated Time To Completion</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Utilization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, this assignment is excluded from Utilization calculations.</description>
        <inlineHelpText>When selected, this assignment is excluded from Utilization calculations.</inlineHelpText>
        <label>Exclude from Utilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this flag is checked, then all of the Assignment&apos;s child Timecard Splits and Expenses will be created with their Exclude from Billing flag checked, which would make them *not* eligible for Billing Generation.  This can be overridden at the child level.</description>
        <inlineHelpText>If this flag is checked, then all of the Assignment&apos;s child Timecard Splits and Expenses will be created with their Exclude from Billing flag checked, which would make them *not* eligible for Billing Generation.  This can be overridden at the child level.</inlineHelpText>
        <label>Exclude from Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Planners__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When selected, excludes the assignment from the Resource and Project Planners. Any excluded assignments are not included in totals calculations and color coding in Planners.</inlineHelpText>
        <label>Exclude from Planners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hours_to_Days_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies how to convert hours to days for time cards against this assignment</description>
        <inlineHelpText>Specifies how to convert hours to days for time cards against this assignment</inlineHelpText>
        <label>Hours to Days Rule</label>
        <referenceTo>pse__Hours_to_Days_Rule__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Is_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the assignment is billable and therefore included in billing events.</inlineHelpText>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Location__c</fullName>
        <inlineHelpText>Location for the assignment.</inlineHelpText>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If an Assignment is associated with a Milestone, Timecards logged for that Assignment will, by default, also be associated with the Milestone on the Assignment at the time.</description>
        <inlineHelpText>If an Assignment is associated with a Milestone, Timecards logged for that Assignment will, by default, also be associated with the Milestone on the Assignment at the time.</inlineHelpText>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Milestone__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>Only milestones for the same project are shown. To display all milestones, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Nick_Name__c</fullName>
        <description>Field for holding the nick name of the assignment</description>
        <label>Nick Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Days_In_Financials__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of non-billable days the resource logged against the assignment, which you can view in the project and RPG actuals.</inlineHelpText>
        <label>Non-Billable Days In Financials</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Days_Submitted__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of non-billable days the resource logged against the assignment.</inlineHelpText>
        <label>Non-Billable Days Submitted</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Expenses_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Non-billable expenses the resource logged against the assignment, which you can view in the project and RPG actuals.</inlineHelpText>
        <label>Non-Billable Expenses In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Expenses_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Non-billable expenses the resource logged against the assignment.</inlineHelpText>
        <label>Non-Billable Expenses Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Hours_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Number of billable hours the resource logged against the assignment, which you can view in the project and RPG actuals.</inlineHelpText>
        <label>Non-Billable Hours In Financials</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Hours_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Number of non-billable hours the resource logged against the assignment.</inlineHelpText>
        <label>Non-Billable Hours Submitted</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Override_Expense_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Group to which this Assignment&apos;s Expense Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.  Note that either way, the Expense Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Group to which this Assignment&apos;s Expense Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Expense Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Expense Group For Assignments</relationshipLabel>
        <relationshipName>Override_ExpGroup_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Expense_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Practice to which this Assignment&apos;s Expense Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.  Note that either way, the Expense Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Practice to which this Assignment&apos;s Expense Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Expense Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Expense Practice For Assignments</relationshipLabel>
        <relationshipName>Override_ExpPractice_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Expense_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Region to which this Assignment&apos;s Expense Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.  Note that either way, the Expense Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Region to which this Assignment&apos;s Expense Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Expense Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Expense Region For Assignments</relationshipLabel>
        <relationshipName>Override_ExpRegion_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_RPG_Audit_Notes__c</fullName>
        <description>Audit Notes related to any Overrides for the Region/Practice/Group of the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</description>
        <inlineHelpText>Audit Notes related to any Overrides for the Region/Practice/Group of the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</inlineHelpText>
        <label>Override RPG Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Override_RPG_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, allows Override Regions, Practices, and Groups to be set for the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</description>
        <inlineHelpText>If checked, allows Override Regions, Practices, and Groups to be set for the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</inlineHelpText>
        <label>Override RPG Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Cost_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Group to which this Assignment&apos;s Timecard Cost Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.  Note that either way, the Timecard Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Group to which this Assignment&apos;s Timecard Cost Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Timecard Cost Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Timecard Cost Group For Assignments</relationshipLabel>
        <relationshipName>Override_TC_CostGroup_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Cost_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Practice to which this Assignment&apos;s Timecard Cost Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.  Note that either way, the Timecard Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Practice to which this Assignment&apos;s Timecard Cost Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Timecard Cost Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Timecard Cost Practice For Assignments</relationshipLabel>
        <relationshipName>Override_TC_CostPractice_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Cost_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Region to which this Assignment&apos;s Timecard Cost Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.  Note that either way, the Timecard Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Region to which this Assignment&apos;s Timecard Cost Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Timecard Cost Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Timecard Cost Region For Assignments</relationshipLabel>
        <relationshipName>Override_TC_CostRegion_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Revenue_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Group to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.  Note that either way, the Timecard Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Group to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Timecard Revenue Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Timecard Revenue Group For Assignments</relationshipLabel>
        <relationshipName>Override_TC_RevGroup_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Timecard_Revenue_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Practice to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.  Note that either way, the Timecard Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Practice to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Practice Actuals, even if the Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Timecard Revenue Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Timecard Revenue Practice For Assignments</relationshipLabel>
        <relationshipName>Override_TC_RevPractice_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>